// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CareerResults renders careers 1`] = `
<div>
  <div
    className="mock"
  >
    Career - 
    Methane/Landfill Gas Collection System Operators
  </div>
  <div
    className="mock"
  >
    Career - 
    Animal Trainers
  </div>
  <div
    className="mock"
  >
    Career - 
    Farmworkers, Farm, Ranch, and Aquacultural Animals
  </div>
  <div
    className="mock"
  >
    Career - 
    Parts Salespersons
  </div>
  <div
    className="mock"
  >
    Career - 
    Armored Assault Vehicle Officers
  </div>
  <div
    className="mock"
  >
    Career - 
    Nonfarm Animal Caretakers
  </div>
  <div
    className="mock"
  >
    Career - 
    Motorboat Operators
  </div>
  <div
    className="mock"
  >
    Career - 
    Animal Breeders
  </div>
  <div
    className="mock"
  >
    Career - 
    Outdoor Power Equipment and Other Small Engine Mechanics
  </div>
  <div
    className="mock"
  >
    Career - 
    Nursery Workers
  </div>
  <div
    className="mock"
  >
    Career - 
    Police, Fire, and Ambulance Dispatchers
  </div>
  <div
    className="mock"
  >
    Career - 
    Artillery and Missile Officers
  </div>
  <div
    className="mock"
  >
    Career - 
    Biofuels Production Managers
  </div>
  <div
    className="mock"
  >
    Career - 
    First-Line Supervisors of Air Crew Members
  </div>
  <div
    className="mock"
  >
    Career - 
    Community and Social Service Specialists, All Other
  </div>
  <div
    className="mock"
  >
    Career - 
    Mining Machine Operators, All Other
  </div>
  <div
    className="mock"
  >
    Career - 
    Transit and Railroad Police
  </div>
  <div
    className="mock"
  >
    Career - 
    Surgical Assistants
  </div>
  <div
    className="mock"
  >
    Career - 
    Precious Metal Workers
  </div>
  <div
    className="mock"
  >
    Career - 
    Concierges
  </div>
  <p>
    <span>
      no_more_careers
    </span>
  </p>
</div>
`;

exports[`CareerResults renders component 1`] = `
<div>
  <p>
    <span>
      no_careers
    </span>
  </p>
</div>
`;

exports[`CareerResults renders more careers button 1`] = `
<div>
  <div
    className="mock"
  >
    Career - 
    Methane/Landfill Gas Collection System Operators
  </div>
  <div
    className="mock"
  >
    Career - 
    Animal Trainers
  </div>
  <div
    className="mock"
  >
    Career - 
    Farmworkers, Farm, Ranch, and Aquacultural Animals
  </div>
  <div
    className="mock"
  >
    Career - 
    Parts Salespersons
  </div>
  <div
    className="mock"
  >
    Career - 
    Armored Assault Vehicle Officers
  </div>
  <div
    className="mock"
  >
    Career - 
    Nonfarm Animal Caretakers
  </div>
  <div
    className="mock"
  >
    Career - 
    Motorboat Operators
  </div>
  <div
    className="mock"
  >
    Career - 
    Animal Breeders
  </div>
  <div
    className="mock"
  >
    Career - 
    Outdoor Power Equipment and Other Small Engine Mechanics
  </div>
  <div
    className="mock"
  >
    Career - 
    Nursery Workers
  </div>
  <div
    className="mock"
  >
    Career - 
    Police, Fire, and Ambulance Dispatchers
  </div>
  <div
    className="mock"
  >
    Career - 
    Artillery and Missile Officers
  </div>
  <div
    className="mock"
  >
    Career - 
    Biofuels Production Managers
  </div>
  <div
    className="mock"
  >
    Career - 
    First-Line Supervisors of Air Crew Members
  </div>
  <div
    className="mock"
  >
    Career - 
    Community and Social Service Specialists, All Other
  </div>
  <div
    className="mock"
  >
    Career - 
    Mining Machine Operators, All Other
  </div>
  <div
    className="mock"
  >
    Career - 
    Transit and Railroad Police
  </div>
  <div
    className="mock"
  >
    Career - 
    Surgical Assistants
  </div>
  <div
    className="mock"
  >
    Career - 
    Precious Metal Workers
  </div>
  <div
    className="mock"
  >
    Career - 
    Concierges
  </div>
  <p>
    <button
      onClick={[Function]}
      type="button"
    >
      show_more
    </button>
  </p>
</div>
`;

exports[`CareerResults renders nothing if not ready 1`] = `null`;
